--- a/schedule.html
+++ b/schedule.html
@@ -430,16 +430,16 @@ modeling in Excel, InsightMaker, and R</a></td>
 <tr class="even">
 <td align="left">Week 2</td>
 <td align="left">1/30/2023</td>
-<td align="left">LECTURE: <a href="LECTURE3.html">Malthus and
-exponential growth</a></td>
+<td align="left">LECTURE: <a href="LECTURE2.html">Intro to Population
+Ecology; Exponential growth</a></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/1/2023</td>
-<td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
-population growth</a></td>
+<td align="left">LECTURE: <a href="LECTURE3.html">Malthus and
+exponential growth</a></td>
 <td align="left">Gotelli Chapter 2</td>
 <td align="left"></td>
 </tr>
