--- a/schedule.html
+++ b/schedule.html
@@ -461,8 +461,8 @@ population growth</a></td>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/8/2023</td>
-<td align="left">LECTURE: <a href="LECTURE5.html">Passenger pigeon/Allee
-Effect</a></td>
+<td align="left">LECTURE: <a href="LECTURE4.html">Density-dependent
+population growth</a></td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
@@ -477,8 +477,8 @@ populations in InsightMaker; MSY</a></td>
 <tr class="even">
 <td align="left">Week 4</td>
 <td align="left">2/13/2023</td>
-<td align="left">LECTURE: <a href="LECTURE6.html">Age-structured
-populations</a></td>
+<td align="left">LECTURE: <a href="LECTURE5.html">Passenger pigeon/Allee
+Effect</a></td>
 <td align="left">Gotelli Chapter 3</td>
 <td align="left"></td>
 </tr>
