--- a/LAB2.html
+++ b/LAB2.html
@@ -813,20 +813,36 @@ pattern).</p>
 <h2>Checklist for Lab 2 completion</h2>
 <p>Your lab answers and pertinent figures should be submitted in the Lab
 2 quiz in WebCampus.</p>
-<p><strong><em>Due Feb. 17 at midnight</em></strong> + <strong>Exercise
-1</strong> - <em>Short answer (1a.)</em><br />
-- <em>Image upload (1b.)</em> - <em>Image upload (1c.)</em><br />
-- <em>Short answer (1c.)</em> + <strong>Exercise 2</strong> - <em>Short
-answer (2a.)</em> - <em>Image upload (2b.)</em> - <em>Short answer
-(2c.)</em> - <em>Short answer (2d.)</em> - <em>Short answer (2e.)</em> -
-<em>Short answer (2f.)</em> - <em>Image upload (2g.)</em></p>
-<pre><code>+  **Exercise 3**
-    -  *Short answer (3a.)*
-    -  *Image upload (3b.)*
-    -  *Image upload (3c.)*
-    -  *Image upload (3d.)*
-    -  *Short answer (3e.)*
-    </code></pre>
+<p><strong><em>Due Feb. 17 at midnight</em></strong></p>
+<ul>
+<li><strong>Exercise 1</strong>
+<ul>
+<li><em>Short answer (1a.)</em><br />
+</li>
+<li><em>Image upload (1b.)</em></li>
+<li><em>Image upload (1c.)</em><br />
+</li>
+<li><em>Short answer (1c.)</em></li>
+</ul></li>
+<li><strong>Exercise 2</strong>
+<ul>
+<li><em>Short answer (2a.)</em></li>
+<li><em>Image upload (2b.)</em></li>
+<li><em>Short answer (2c.)</em></li>
+<li><em>Short answer (2d.)</em></li>
+<li><em>Short answer (2e.)</em></li>
+<li><em>Short answer (2f.)</em></li>
+<li><em>Image upload (2g.)</em></li>
+</ul></li>
+<li><strong>Exercise 3</strong>
+<ul>
+<li><em>Short answer (3a.)</em></li>
+<li><em>Image upload (3b.)</em></li>
+<li><em>Image upload (3c.)</em></li>
+<li><em>Image upload (3d.)</em></li>
+<li><em>Short answer (3e.)</em></li>
+</ul></li>
+</ul>
 </div>
 <div
 id="optional-exercise-4-delayed-density-dependence-optional--not-part-of-the-official-lab"
