--- a/index.html
+++ b/index.html
@@ -464,12 +464,13 @@ div.tocify {
 <strong>Office:</strong> Fleischmann Agriculture, room 220e<br />
 <strong>Phone:</strong> 775-682-7449<br />
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu<br />
-<strong>Office hours</strong>: M 4pm in FA 220e<br />
+<strong>Office hours</strong>: Mondays from 4 to 5pm in FA 220e<br />
 <strong>Course Website</strong>: <a
 href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
 <p><strong>Teaching Assistant</strong> Sage Ellis
 (sageellis_at_nevada_dot_unr_dot_edu)<br />
-<strong>TA Office hours</strong>: TBD</p>
+<strong>TA Office hours</strong>: Fridays from 11am to noon in FA
+301</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
 <p><strong>Lecture &amp; Discussion</strong>: M, W at 10am (50 mins) in
