--- a/LECTURE4.html
+++ b/LECTURE4.html
@@ -495,7 +495,7 @@ it, and vice versa.</p>
 abundance will cause a decrease in the population growth rate, and a
 decrease in abundance will cause an increase in the population growth
 rate (<em>compensatory growth</em>).</p>
-<p>You can’t have a regulated population without some kind of negative
+<p>You can’t have a regulated system without some kind of negative
 feedback.</p>
 <p><strong>thought Q</strong>: Is density-dependent population
 regulation a “law of nature”?</p>
@@ -632,6 +632,9 @@ years.</p></li>
 </ol>
 <p>Your model should look something like this!</p>
 <p><img src="IM5.jpg" /></p>
+<p>For the purpose of answering the questions below, <a
+href="https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd">here
+is a functioning model you can use as a starting point</a>:</p>
 <ol start="7" style="list-style-type: decimal">
 <li>Run this model. Does the model behave as you would expect?</li>
 </ol>
