--- a/LECTURE3.html
+++ b/LECTURE3.html
@@ -465,7 +465,7 @@ div.tocify {
 Robert Malthus (1766 – 1834)</a> was an English cleric who penned one of
 the most important and influential essays ever written: <strong><em>An
 Essay on the Principle of Population</em></strong></p>
-<p><img src="malthus1.jpg" /></p>
+<p><img src="malthus1.jpg" style="width:30.0%" /></p>
 <p>The main point of this essay can be summed up by the following (a
 direct quote):</p>
 <blockquote>
@@ -506,7 +506,7 @@ surplus population” - Ebenezer Scrooge</p>
 </blockquote>
 <p><strong>Discussion Question:</strong> Was Malthus right? For humans?
 For wildlife? Can you think of any examples for or against?</p>
-<p><img src="darwin1.jpg" /></p>
+<p><img src="darwin1.jpg" style="width:30.0%" /></p>
 <p>Interestingly, in 1838 (four years after Malthus’ death), Charles
 Darwin, just back from his trip on HMS Beagle (1831–1836), was searching
 for possible mechanisms to explain the origin of species. On reading
@@ -584,7 +584,7 @@ otherwise remains at 1%), create new <strong>Links</strong> from
 <em>Death rate</em>. Your canvas should look something like the image
 below:</p></li>
 </ol>
-<p><img src="IM4.jpg" /></p>
+<p><img src="IM4.jpg" style="width:60.0%" /></p>
 <ol start="6" style="list-style-type: decimal">
 <li>Now we can implement the “famine condition”! Open the equation
 editor window for <em>Death rate</em> (click on the equals sign) and
@@ -615,9 +615,8 @@ Try to implement this in InsightMaker. That is, can you change the model
 so that the population limit increases linearly- say, by 1000 per year?
 What happens then? HINT: you can add a [Flow] to represent increase in
 agricultural production!</p>
-<p><strong>Q</strong> Can you adjust the parameters to make this
-simulated human population <strong>sustainable</strong>? Why? Why not?
-[TopHat]</p>
+<p><strong>Q</strong> Is this population (‘famine condition’ model)
+regulated? Is it sustainable? Why or why not? [PointSolutions]</p>
 <p>Just for fun, here is a <a
 href="https://www.youtube.com/watch?v=QAkW_i0bDpQ">Video</a> made by <a
 href="https://en.wikipedia.org/wiki/John_Green_(author)">John Green</a>
