--- a/LECTURE4.html
+++ b/LECTURE4.html
@@ -631,7 +631,7 @@ the equation window to make sure the equations are correct.</p></li>
 years.</p></li>
 </ol>
 <p>Your model should look something like this!</p>
-<p><img src="IM5.jpg" /></p>
+<p><img src="IM5.jpg" style="width:65.0%" /></p>
 <p>For the purpose of answering the questions below, <a
 href="https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd">here
 is a functioning model you can use as a starting point</a>:</p>
