--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -14,7 +14,7 @@
 
 <title>Passenger Pigeon/Allee effect</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
@@ -64,6 +64,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -84,6 +85,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -309,7 +313,7 @@ div.tocify {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -325,7 +329,7 @@ div.tocify {
   <a href="schedule.html">Schedule</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Lectures
      
     <span class="caret"></span>
@@ -400,7 +404,7 @@ div.tocify {
   </ul>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Labs
      
     <span class="caret"></span>
@@ -452,41 +456,90 @@ div.tocify {
 
 <h1 class="title toc-ignore">Passenger Pigeon/Allee effect</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2022</h4>
+<h4 class="date">Spring 2023</h4>
 
 </div>
 
 
 <div id="allee-effect" class="section level2">
 <h2>Allee Effect</h2>
-<p><img src="prairie_dogs3.jpg" /></p>
-<p>In the last lecture, we talked about how density-dependent feedbacks can help to regulate population densities over time. This is a negative feedback, and often termed ‘negative density dependence’.</p>
-<p>What happens if density dependence goes the other way? What if an increase in density produces an <em>increase</em> in the population growth rate <em>r</em> (a positive feedback)?</p>
-<p>Imagine a very social species, like the prairie dogs pictured above. If the density of prairie dogs is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher <em>d</em>. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems (audio feedback, avalanches, etc)!</p>
-<p>This effect – whereby population growth rate may <strong>decrease</strong> when population size decreases – is called an <strong>Allee effect</strong>, named after ecologist <a href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde Allee</a> (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.</p>
-<p>Interestingly, Warder Allee’s interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was a devout Quaker, an anti-war activist and an advocate of human social cooperation! From the Wikipedia article: “Allee saw ecologists as ‘social healers’ who were able to provide a naturalistic foundation for ethics through their research”</p>
+<p><img src="prairie_dogs3.jpg" style="width:40.0%" /></p>
+<p>In the last lecture, we talked about how density-dependent feedbacks
+can regulate population densities over time. In the logistic growth
+model, we saw that a negative feedback (a decline in population growth
+rate as density increased) could result in the population stabilizing at
+its carrying capacity. In population ecology, this type of negative
+feedback is called ‘negative density dependence’.</p>
+<p>What happens if density dependence goes the other way? What if an
+increase in population density were to induce an <em>increase</em> in
+population growth rate <em>r</em>? This would be a positive feedback:
+increased population density results in faster growth, which produces a
+bigger population, which results in faster population growth, etc.</p>
+<p>Imagine a very social species, like the prairie dogs pictured above.
+If the density of prairie dogs is high, they can warn each other about
+predators. If the density is low, the predation rate might go up,
+resulting in higher <em>d</em>. This is a positive feedback, and can
+result in, well, you should simulate it for yourself! But remember,
+positive feedbacks generally result in unstable or non-regulated systems
+(audio feedback, avalanches, etc)!</p>
+<p>This effect – whereby population growth rate may
+<strong>decrease</strong> when population size decreases – is called an
+<strong>Allee effect</strong>, named after ecologist <a
+href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde
+Allee</a> (1885-1955). Allee specialized in social behavior and
+aggregations, and recognized the benefits of social aggregations to
+individual fitness.</p>
+<p>Interestingly, Warder Allee’s interest in cooperation and the
+benefits of social aggregations spilled over into his life in other
+ways. He was a devout Quaker, an anti-war activist and an advocate of
+human social cooperation! From the Wikipedia article: “Allee saw
+ecologists as ‘social healers’ who were able to provide a naturalistic
+foundation for ethics through their research”</p>
 <p><img src="Allee1.jpg" /></p>
-<p>One of the most famous examples of a possible Allee effect involves the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
+<p>One of the most famous examples of a possible Allee effect involves
+the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
 <p><img src="PP2.jpg" /></p>
-<p>The <a href="https://en.wikipedia.org/wiki/Passenger_pigeon">passenger pigeon</a> was one of the most abundant birds in North America. Some estimate that the total species abundance may have been over three <em>billion</em> at one time!</p>
+<p>The <a
+href="https://en.wikipedia.org/wiki/Passenger_pigeon">passenger
+pigeon</a> was one of the most abundant birds in North America. Some
+estimate that the total species abundance may have been over three
+<em>billion</em> at one time!</p>
 <p>Aldo Leopold once said,</p>
 <blockquote>
-<p>“Men still live who, in their youth, remember pigeons; trees still live who, in their youth, were shaken by a living wind. But a few decades hence only the oldest oaks will remember, and at long last only the hills will know.” —Aldo Leopold, “On a Monument to the Pigeon”, 1947</p>
+<p>“Men still live who, in their youth, remember pigeons; trees still
+live who, in their youth, were shaken by a living wind. But a few
+decades hence only the oldest oaks will remember, and at long last only
+the hills will know.” —Aldo Leopold, “On a Monument to the Pigeon”,
+1947</p>
 </blockquote>
-<p>What happened to the passenger pigeon? Well, first of all pigeons were hunted on a massive scale using wasteful methods.</p>
+<p>What happened to the passenger pigeon? Well, first of all pigeons
+were hunted on a massive scale using wasteful methods.</p>
 <p><img src="PP1.jpg" /></p>
-<p>Secondly, hardwood forests (primary food source for pigeons was mast from hardwood trees) were cleared on a massive scale, reducing habitat.</p>
-<p>But what do passenger pigeons have to do with the Allee effect? Well, they were an <em>extremely</em> gregarious species. Once their numbers dwindled (due to hunting and clearcutting) one hypothesis is that their social systems broke down, and they could no longer effectively reproduce or protect themselves from predators.</p>
+<p>Secondly, hardwood forests (primary food source for pigeons was mast
+from hardwood trees) were cleared on a massive scale, reducing
+habitat.</p>
+<p>But what do passenger pigeons have to do with the Allee effect? Well,
+they were an <em>extremely</em> gregarious species. Once their numbers
+dwindled (due to hunting and clearcutting) one hypothesis is that their
+social systems broke down, and they could no longer effectively
+reproduce or protect themselves from predators.</p>
 </div>
 <div id="in-class-exercise-allee-effect" class="section level2">
 <h2>In-class exercise: Allee effect</h2>
-<p>In this exercise we will explore the implications of <strong>positive density dependence</strong> on vital rates.</p>
+<p>In this exercise we will explore the implications of <strong>positive
+density dependence</strong> on vital rates.</p>
 <ol style="list-style-type: decimal">
-<li>In InsightMaker, load up the logistic model with vital rates – that is, where <span class="math inline">\(b\)</span> and <span class="math inline">\(d\)</span> are each modeled density-dependent. It should look something like this (or if you don’t already have this, clone it from <a href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
+<li>In InsightMaker, load up the logistic model with vital rates – that
+is, where <span class="math inline">\(b\)</span> and <span
+class="math inline">\(d\)</span> are each modeled density-dependent. It
+should look something like this (or if you don’t already have this,
+clone it from <a
+href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
 </ol>
 <p><img src="IM5.jpg" /></p>
 <ol start="2" style="list-style-type: decimal">
-<li><p>Now add a new constant ([Variable] in InsightMaker) called <em>Allee threshold</em>. Set this constant equal to 200.</p></li>
+<li><p>Now add a new constant ([Variable] in InsightMaker) called
+<em>Allee threshold</em>. Set this constant equal to 200.</p></li>
 <li><p>As for the other parameters, set them as follows:</p></li>
 </ol>
 <ul>
@@ -500,31 +553,52 @@ div.tocify {
 <li>Min mortality: 0.3</li>
 </ul>
 <ol start="4" style="list-style-type: decimal">
-<li>Now let’s use a <em>Conditional (IF-THEN-ELSE) statement</em> to specify an Allee effect. The population experiences maximum growth rate at the Allee threshold. If the population is above the Allee threshold, the population exhibits (stabilizing) negative density dependence. If the population is below the Allee threshold, then the population experiences positive density dependence- whereby individuals in smaller populations have <em>lower</em> overall fitness.</li>
+<li>Now let’s use a <em>Conditional (IF-THEN-ELSE) statement</em> to
+specify an Allee effect. The population experiences maximum growth rate
+at the Allee threshold. If the population is above the Allee threshold,
+the population exhibits (stabilizing) negative density dependence. If
+the population is below the Allee threshold, then the population
+experiences positive density dependence- whereby individuals in smaller
+populations have <em>lower</em> overall fitness.</li>
 </ol>
-<p>To do this, define your <em>Births per Capita</em> using the following syntax:</p>
+<p>To do this, define your <em>Births per Capita</em> using the
+following syntax:</p>
 <pre><code>If [Pigeons]&lt;[Allee threshold] Then
   [Max fecundity]-[Density dependence on fecundity]*([Allee threshold]-[Pigeons])
 Else
   [Max fecundity]-[Density dependence on fecundity]*([Pigeons]-[Allee threshold])
 End If</code></pre>
-<p>Similarly, define your <em>Deaths per capita</em> using the following syntax:</p>
+<p>Similarly, define your <em>Deaths per capita</em> using the following
+syntax:</p>
 <pre><code>If [Pigeons]&lt;[Allee threshold] Then
   [Min mortality]+[Density dependence on survival]*([Allee threshold]-[Pigeons])
 Else
   [Min mortality]+[Density dependence on survival]*([Pigeons]-[Allee threshold])
 End If</code></pre>
 <ol start="5" style="list-style-type: decimal">
-<li>If we are running out of time in class (which we probably will be!), load the model (and clone it!) using <a href="https://insightmaker.com/insight/71147/Allee-Effect-1#">this link</a>!</li>
+<li>If we are running out of time in class (which we probably will be!),
+load the model (and clone it!) using <a
+href="https://insightmaker.com/insight/71147/Allee-Effect-1#">this
+link</a>!</li>
 </ol>
 <p>Now you can try to answer the following questions:</p>
-<p><strong>Q</strong>: What is the carrying capacity (K) for this population?</p>
-<p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines. [tophat]</p>
-<p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em> or an <em>unstable equilibrium</em>? [tophat]</p>
-<p><strong>Q</strong>: if you plot birth and death rates as a function of density in this model, can you identify the two equilibria? [tophat]</p>
-<p><strong>Q:</strong> Why do Allee effects often spell bad news for wildlife conservation?</p>
-<p>And just for fun, here is an article about <a href="http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct">the passenger pigeon and its possible “de-extinction”</a></p>
-<p><strong>Q:</strong> Do you support Revive and Restore’s efforts to bring back the passenger pigeon? Why or why not??</p>
+<p><strong>Q</strong>: What is the carrying capacity (K) for this
+population?</p>
+<p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium
+point in this model. Try to find another equilibrium point- that is, a
+point where the population neither grows nor declines. [tophat]</p>
+<p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em>
+or an <em>unstable equilibrium</em>? [tophat]</p>
+<p><strong>Q</strong>: if you plot birth and death rates as a function
+of density in this model, can you identify the two equilibria?
+[tophat]</p>
+<p><strong>Q:</strong> Why do Allee effects often spell bad news for
+wildlife conservation?</p>
+<p>And just for fun, here is an article about <a
+href="http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct">the
+passenger pigeon and its possible “de-extinction”</a></p>
+<p><strong>Q:</strong> Do you support Revive and Restore’s efforts to
+bring back the passenger pigeon? Why or why not??</p>
 <p><a href="LECTURE6.html">–go to next lecture–</a></p>
 </div>
 
