--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -345,13 +345,13 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus</a>
+      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
     </li>
     <li>
-      <a href="LECTURE4.html">Population Regulation</a>
+      <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
     </li>
     <li>
-      <a href="LECTURE5.html">Passenger Pigeon</a>
+      <a href="LECTURE5.html">Positive density dependence (Allee effect)</a>
     </li>
     <li>
       <a href="LECTURE6.html">Age-structured populations</a>
@@ -475,13 +475,13 @@ increase in population density were to induce an <em>increase</em> in
 population growth rate <em>r</em>? This would be a positive feedback:
 increased population density results in faster growth, which produces a
 bigger population, which results in faster population growth, etc.</p>
-<p>Imagine a very social species, like the prairie dogs pictured above.
-If the density of prairie dogs is high, they can warn each other about
-predators. If the density is low, the predation rate might go up,
-resulting in higher <em>d</em>. This is a positive feedback, and can
-result in, well, you should simulate it for yourself! But remember,
-positive feedbacks generally result in unstable or non-regulated systems
-(audio feedback, avalanches, etc)!</p>
+<p>Imagine a social species, like the prairie dogs pictured above. If
+the density of prairie dogs is high, they can warn each other about
+predators. If the density is low, there may not be enough neighbors
+around to warn each other of approaching danger, and the predation rate
+might go up, resulting in higher <em>d</em>. This is a positive
+feedback, and can result in, well, you should simulate it for
+yourself!</p>
 <p>This effect – whereby population growth rate may
 <strong>decrease</strong> when population size decreases – is called an
 <strong>Allee effect</strong>, named after ecologist <a
@@ -489,16 +489,19 @@ href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde
 Allee</a> (1885-1955). Allee specialized in social behavior and
 aggregations, and recognized the benefits of social aggregations to
 individual fitness.</p>
-<p>Interestingly, Warder Allee’s interest in cooperation and the
-benefits of social aggregations spilled over into his life in other
-ways. He was a devout Quaker, an anti-war activist and an advocate of
-human social cooperation! From the Wikipedia article: “Allee saw
-ecologists as ‘social healers’ who were able to provide a naturalistic
-foundation for ethics through their research”</p>
-<p><img src="Allee1.jpg" /></p>
-<p>One of the most famous examples of a possible Allee effect involves
-the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
-<p><img src="PP2.jpg" /></p>
+<p>Interestingly, Dr. Allee’s interest in cooperation and the benefits
+of social aggregations spilled over into his life in other ways. He was
+a devout Quaker, an anti-war activist and an advocate of human social
+cooperation! From the Wikipedia article: “Allee saw ecologists as
+‘social healers’ who were able to provide a naturalistic foundation for
+ethics through their research”</p>
+<p><img src="Allee1.jpg" style="width:30.0%" /></p>
+<div id="passenger-pigeon" class="section level3">
+<h3>Passenger pigeon</h3>
+<p>One interesting example of a possible Allee effect involves the
+extinction of the passenger pigeon (<em>Ectopistes
+migratorius</em>).</p>
+<p><img src="PP2.jpg" style="width:30.0%" /></p>
 <p>The <a
 href="https://en.wikipedia.org/wiki/Passenger_pigeon">passenger
 pigeon</a> was one of the most abundant birds in North America. Some
@@ -512,41 +515,46 @@ decades hence only the oldest oaks will remember, and at long last only
 the hills will know.” —Aldo Leopold, “On a Monument to the Pigeon”,
 1947</p>
 </blockquote>
-<p>What happened to the passenger pigeon? Well, first of all pigeons
-were hunted on a massive scale using wasteful methods.</p>
-<p><img src="PP1.jpg" /></p>
+<p>What happened to the passenger pigeon?</p>
+<p>First of all, pigeons were hunted on a massive scale using wasteful
+methods.</p>
+<p><img src="PP1.jpg" style="width:50.0%" /></p>
 <p>Secondly, hardwood forests (primary food source for pigeons was mast
-from hardwood trees) were cleared on a massive scale, reducing
+from hardwood trees) were cleared on a massive scale, reducing available
 habitat.</p>
-<p>But what do passenger pigeons have to do with the Allee effect? Well,
-they were an <em>extremely</em> gregarious species. Once their numbers
-dwindled (due to hunting and clearcutting) one hypothesis is that their
-social systems broke down, and they could no longer effectively
-reproduce or protect themselves from predators.</p>
+<p>But what do passenger pigeons have to do with the Allee effect?</p>
+<p>Passenger pigeons were an extremely gregarious species. Once their
+numbers dwindled (due to hunting and clear-cutting) one hypothesis is
+that their social systems broke down, and they could no longer
+effectively reproduce or protect themselves from predators.</p>
+</div>
 </div>
 <div id="in-class-exercise-allee-effect" class="section level2">
 <h2>In-class exercise: Allee effect</h2>
 <p>In this exercise we will explore the implications of <strong>positive
-density dependence</strong> on vital rates.</p>
+density dependence</strong> (Allee effect) on population dynamics.</p>
 <ol style="list-style-type: decimal">
-<li>In InsightMaker, load up the logistic model with vital rates – that
-is, where <span class="math inline">\(b\)</span> and <span
-class="math inline">\(d\)</span> are each modeled density-dependent. It
-should look something like this (or if you don’t already have this,
-clone it from <a
-href="https://insightmaker.com/insight/70353/Logistic-Growth-1#">here</a>):</li>
+<li>In InsightMaker, load up the logistic population growth model with
+explicit birth and death rate – that is, where <span
+class="math inline">\(b\)</span> and <span
+class="math inline">\(d\)</span> both decline linearly with increasing
+population density. It should look something like this (or if you don’t
+already have this, clone it from <a
+href="https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd">here</a>):</li>
 </ol>
-<p><img src="IM5.jpg" /></p>
+<p>It should be structured something like this:</p>
+<p><img src="IM5.jpg" style="width:70.0%" /></p>
 <ol start="2" style="list-style-type: decimal">
-<li><p>Now add a new constant ([Variable] in InsightMaker) called
-<em>Allee threshold</em>. Set this constant equal to 200.</p></li>
+<li><p>Now add a new [Variable] in InsightMaker called <em>Allee
+threshold</em>. Set this variable equal to 200 (it is a ‘constant’ and
+will remain at this value through the simulation).</p></li>
 <li><p>As for the other parameters, set them as follows:</p></li>
 </ol>
 <ul>
 <li>Initial abundance: 201 (just above the Allee threshold)</li>
-<li>Density dependence on birth rate: 0.004<br />
+<li>Density dependence on birth rate: 0.0004<br />
 </li>
-<li>Density dependence on mortality: 0.001<br />
+<li>Density dependence on mortality: 0.0001<br />
 </li>
 <li>Max birth rate: 0.8<br />
 </li>
@@ -562,14 +570,14 @@ experiences positive density dependence- whereby individuals in smaller
 populations have <em>lower</em> overall fitness.</li>
 </ol>
 <p>To do this, define your <em>Births per Capita</em> using the
-following syntax:</p>
+following syntax (or equivalent):</p>
 <pre><code>If [Pigeons]&lt;[Allee threshold] Then
   [Max fecundity]-[Density dependence on fecundity]*([Allee threshold]-[Pigeons])
 Else
   [Max fecundity]-[Density dependence on fecundity]*([Pigeons]-[Allee threshold])
 End If</code></pre>
 <p>Similarly, define your <em>Deaths per capita</em> using the following
-syntax:</p>
+syntax (or equivalent):</p>
 <pre><code>If [Pigeons]&lt;[Allee threshold] Then
   [Min mortality]+[Density dependence on survival]*([Allee threshold]-[Pigeons])
 Else
@@ -578,24 +586,22 @@ End If</code></pre>
 <ol start="5" style="list-style-type: decimal">
 <li>If we are running out of time in class (which we probably will be!),
 load the model (and clone it!) using <a
-href="https://insightmaker.com/insight/71147/Allee-Effect-1#">this
+href="https://insightmaker.com/insight/3iPYWl5vT2niZ1WGtC7C7Y/Allee-effect-lecture-5">this
 link</a>!</li>
 </ol>
 <p>Now you can try to answer the following questions:</p>
 <p><strong>Q</strong>: What is the carrying capacity (K) for this
-population?</p>
+population? [PointSolutions]</p>
 <p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium
 point in this model. Try to find another equilibrium point- that is, a
-point where the population neither grows nor declines. [tophat]</p>
+point where the population neither grows nor declines.
+[PointSolutions]</p>
 <p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em>
-or an <em>unstable equilibrium</em>? [tophat]</p>
-<p><strong>Q</strong>: if you plot birth and death rates as a function
-of density in this model, can you identify the two equilibria?
-[tophat]</p>
+or an <em>unstable equilibrium</em>? [PointSolutions]</p>
 <p><strong>Q:</strong> Why do Allee effects often spell bad news for
 wildlife conservation?</p>
-<p>And just for fun, here is an article about <a
-href="http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct">the
+<p>And just for fun, here is some information about <a
+href="https://reviverestore.org/about-the-passenger-pigeon/">the
 passenger pigeon and its possible “de-extinction”</a></p>
 <p><strong>Q:</strong> Do you support Revive and Restore’s efforts to
 bring back the passenger pigeon? Why or why not??</p>
