--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -590,16 +590,14 @@ href="https://insightmaker.com/insight/3iPYWl5vT2niZ1WGtC7C7Y/Allee-effect-lectu
 link</a>!</li>
 </ol>
 <p>Now you can try to answer the following questions:</p>
-<p><strong>Q</strong>: What is the carrying capacity (K) for this
-population? [PointSolutions]</p>
 <p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium
 point in this model. Try to find another equilibrium point- that is, a
 point where the population neither grows nor declines.
 [PointSolutions]</p>
 <p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em>
 or an <em>unstable equilibrium</em>? [PointSolutions]</p>
-<p><strong>Q:</strong> Why do Allee effects often spell bad news for
-wildlife conservation?</p>
+<p>Hopefully it is clear from this example why Allee effects often spell
+bad news for wildlife conservation!</p>
 <p>And just for fun, here is some information about <a
 href="https://reviverestore.org/about-the-passenger-pigeon/">the
 passenger pigeon and its possible “de-extinction”</a></p>
