--- a/LAB3.html
+++ b/LAB3.html
@@ -544,8 +544,10 @@ a population can help managers decide which individuals to translocate,
 or to harvest, or cull from a population. Therefore, reproductive value
 is critical for applied population ecology! Reproductive Value also
 factors heavily in evolutionary studies and life history theory.</p>
-<p><strong>Q:</strong> Why is the reproductive value ‘discounted’ by the
+<p><strong>Q:</strong> Why is the reproductive value adjusted by the
 population growth rate??</p>
+<p>Here is a sample life table for practice!! <a
+href="life_table.xlsx">click here to download</a></p>
 </div>
 </div>
 <div id="exercise-1-life-table-analysis" class="section level2">
