--- a/LAB3.html
+++ b/LAB3.html
@@ -788,13 +788,11 @@ the appropriate equations.</p></li>
 <li><p>Explore the model- make sure you understand how it
 works!</p></li>
 </ol>
-<p>Your final model should look something like this:</p>
-<p><img src="IM_lab3.JPG" style="width:50.0%" /> I encourage you to
-build your own age-structured IM model, but I will also provide a link
-to a “skeleton” version of the model so you can focus on the concepts
-and not struggle too much with the modeling. Here is the “skeleton”
-version (all the structure but none of the parameters or equations) of
-the model: <a
+<p>I encourage you to build your own age-structured IM model, but I will
+also provide a link to a “skeleton” version of the model so you can
+focus on the concepts and not struggle too much with the modeling. Here
+is the “skeleton” version (all the structure but none of the parameters
+or equations) of the model: <a
 href="https://insightmaker.com/insight/SATbX2gVkMZqmGEwi175V/lab3-exercise3-skeleton">https://insightmaker.com/insight/SATbX2gVkMZqmGEwi175V/lab3-exercise3-skeleton</a></p>
 <div id="questions-exercise-3-age-structured-model-in-insightmaker"
 class="section level3">
