--- a/LAB4.html
+++ b/LAB4.html
@@ -1003,7 +1003,7 @@ class="section level2">
 matrix!</h2>
 <p>As a test of your understanding, try to implement the following
 passage as a matrix projection model:</p>
-<p><img src="redtail1.jpg" /></p>
+<p><img src="redtail1.jpg" style="width:30.0%" /></p>
 <blockquote>
 <p>We assumed that the red-tailed hawk life history could be described
 in terms of three major life stages: hatchling (first year of life),
