--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -567,7 +567,8 @@ tracked across time.</p>
 <h3>Fecundity schedule</h3>
 <p>The fecundity component of the life table is called the “fecundity
 schedule”! The term <span class="math inline">\(b(x)\)</span> represents
-the per-capita birth rate for females of age x.</p>
+the per-capita birth rate for females of age x. The fecundity schedule
+describes how birth rate changes with age.</p>
 </div>
 <div id="survivorship-schedule" class="section level3">
 <h3>Survivorship schedule</h3>
@@ -586,15 +587,18 @@ known as <strong>survivorship</strong>.</p>
 <p>The term <span class="math inline">\(g(x)\)</span> represents the
 <em>proportion surviving from age x to age x+1</em>. This is called the
 <strong>survival rate</strong> (contrast this with survivorship!).</p>
+<p>The survivorship schedule describes how survivorship drops off with
+age. The survivorship schedule is typically visualized as a
+<strong>survivorship curve</strong>.</p>
 </div>
 <div id="types-of-survivorship-curves" class="section level3">
 <h3>Types of survivorship curves…</h3>
 <p><em>Survivorship curves</em> describe how the logarithm of
 survivorship (<span class="math inline">\(log(l(x))\)</span>) drops off
 with age.</p>
-<p>There are three main types of survivorship curves (also called
-survivorship schedules), and these curves are classified as <strong>Type
-I</strong>, <strong>Type II</strong>, and <strong>Type III</strong>.</p>
+<p>There are three main types of survivorship curve (survivorship
+schedule), and these curves are classified as <strong>Type I</strong>,
+<strong>Type II</strong>, and <strong>Type III</strong>.</p>
 <p>These three types of <strong>life history</strong> pattern can be
 illustrated with three real-world examples: humans, songbirds, and
 frogs.</p>
