--- a/LAB4.html
+++ b/LAB4.html
@@ -971,8 +971,8 @@ stmat</code></pre>
 <pre class="r"><code># lambda(stmat) </code></pre>
 <p>Build an InsightMaker model that represents the same population as
 the stage-based matrix above. Remember that the top row represents
-fecundity terms, while the bottom rows represent transition terms. Also
-remember how to convert between survival rates and mortality rates
+fecundity terms, while the remaining rows represent transition terms.
+Also remember how to convert between survival rates and mortality rates
 (mortality equals one minus survival). Initialize the model with 100
 individuals at stable stage distribution (SSD).</p>
 <p>3a (short answer). Provide the URL to your InsightMaker model (and
